--- a/blogposts/index.html
+++ b/blogposts/index.html
@@ -12,7 +12,7 @@
 
   <meta name="robots" content="noodp" />
 
-<link rel="canonical" href="http://example.org/" />
+<link rel="canonical" href="https://spuckwaffel.com/blogposts/" />
 
 
 
@@ -24,7 +24,7 @@
   
   
   
-  <link rel="stylesheet" href="http://example.org/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 
 
@@ -32,8 +32,8 @@
 
 
 
-  <link rel="shortcut icon" href="http://example.org/img/theme-colors/blue.png">
-  <link rel="apple-touch-icon" href="http://example.org/img/theme-colors/blue.png">
+  <link rel="shortcut icon" href="img/theme-colors/blue.png">
+  <link rel="apple-touch-icon" href="img/theme-colors/blue.png">
 
 
 
@@ -50,11 +50,11 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Spuckwaffels Blog">
 <meta property="og:description" content="All the blogposts by Spuckwaffel" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="https://spuckwaffel.com/blogposts/" />
 <meta property="og:site_name" content="Spuckwaffels Blog" />
 
   
-    <meta property="og:image" content="http://example.org/img/favicon/blue.png">
+    <meta property="og:image" content="img/favicon/blue.png">
   
 
 <meta property="og:image:width" content="1200">
