--- a/blogposts/index.html
+++ b/blogposts/index.html
@@ -24,7 +24,7 @@
   
   
   
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://spuckwaffel.com/blogposts/styles.css">
 
 
 
@@ -32,8 +32,8 @@
 
 
 
-  <link rel="shortcut icon" href="img/theme-colors/blue.png">
-  <link rel="apple-touch-icon" href="img/theme-colors/blue.png">
+  <link rel="shortcut icon" href="https://spuckwaffel.com/blogposts/img/theme-colors/blue.png">
+  <link rel="apple-touch-icon" href="https://spuckwaffel.com/blogposts/img/theme-colors/blue.png">
 
 
 
@@ -54,7 +54,7 @@
 <meta property="og:site_name" content="Spuckwaffels Blog" />
 
   
-    <meta property="og:image" content="img/favicon/blue.png">
+    <meta property="og:image" content="https://spuckwaffel.com/blogposts/img/favicon/blue.png">
   
 
 <meta property="og:image:width" content="1200">
@@ -64,7 +64,7 @@
 
 
 
-  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="Spuckwaffels Blog" />
+  <link href="/blogposts/index.xml" rel="alternate" type="application/rss+xml" title="Spuckwaffels Blog" />
 
 
 
@@ -176,7 +176,7 @@
 
         
           <div>
-            <a class="read-more button" href="https://spuckwaffel.com/blogposts/posts/uedumper/">Read more →</a>
+            <a class="read-more button" href="/blogposts/posts/uedumper/">Read more →</a>
           </div>
         
       </article>
@@ -210,7 +210,7 @@
 
 
 
-<script type="text/javascript" src="/bundle.min.js"></script>
+<script type="text/javascript" src="/blogposts/bundle.min.js"></script>
 
 
 
