--- a/blogposts/about/index.html
+++ b/blogposts/about/index.html
@@ -84,7 +84,7 @@ Feel free to take a look at my projects and join me in my learning journey." />
   <header class="header">
   <div class="header__inner">
     <div class="header__logo">
-      <a href="/">
+      <a href="/blogposts/">
   <div class="logo">
     Spuckwaffels Blogposts
   </div>
