--- a/blogposts/404.html
+++ b/blogposts/404.html
@@ -80,7 +80,7 @@
   <header class="header">
   <div class="header__inner">
     <div class="header__logo">
-      <a href="/">
+      <a href="/blogposts/">
   <div class="logo">
     Spuckwaffels Blogposts
   </div>
